Redesigned enricher framework to support annotating every possible source element.